--- a/FragListApp/app/src/main/res/values/strings.xml
+++ b/FragListApp/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="menu_editview">Edit</string>
     <string name="menu_delete">Delete</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
