--- a/FragListApp/app/src/main/res/values/strings.xml
+++ b/FragListApp/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="menu_delete">Delete</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_done">DONE</string>
+    <string name="menu_todo">TODO</string>
 </resources>
