--- a/FragListApp/app/src/main/res/values/strings.xml
+++ b/FragListApp/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_done">DONE</string>
     <string name="menu_todo">TODO</string>
+    <string name="add_task">Add Task to TODO</string>
 </resources>
